--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "etag": "^1.8.1",
+    "glob": "^7.1.6",
     "mime-types": "^2.1.27",
     "mkdirp": "^1.0.4"
   },
