--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "password-manager",
   "version": "1.3.0",
   "description": "A password manager",
+  "engines": {
+    "node": ">=10.14.2"
+  },
   "main": "index.js",
   "scripts": {
+    "preinstall": "node ./bin/pre-install.js",
     "start": "node ./src/server",
     "start:dev": "concurrently --kill-others -p \"[ {name} ]\" -n SERVER -c black.bgGreen \"NODE_ENV=dev node ./watcher.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
