--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ cache:
     - node_modules
 
 install:
-  - npm install -g codecov
+  # Locking CodeCov verion due to Travis issues https://github.com/codecov/codecov-node/issues/184
+  - npm install -g codecov@3.7.0
   - npm install
 
 script:
