--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 install:
   # Locking CodeCov verion due to Travis issues https://github.com/codecov/codecov-node/issues/184
-  - npm install -g codecov@3.7.0
+  - npm install -g codecov
   - npm install
 
 script:
