ops: Added new Release script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "node ./bin/pre-install.js",
+    "release": "./bin/release.js",
+    "release:dryrun": "./bin/release.js -dr",
+    "release:update": "sh -c \"$(curl -fsSL https://raw.githubusercontent.com/the0neWhoKnocks/release-script/master/js/tools/install.sh) --update --install-dir \\\"bin\\\"\"",
     "start": "node ./src/server",
     "start:dev": "concurrently --kill-others -p \"[ {name} ]\" -n SERVER -c black.bgGreen \"NODE_ENV=dev node ./watcher.js\"",
     "test": "jest --runInBand --no-watchman --config ./conf.jest.js",
