--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.1",
   "description": "A password manager",
   "engines": {
-    "node": ">=10.14.2"
+    "node": ">=14"
   },
   "main": "index.js",
   "scripts": {
@@ -13,8 +13,8 @@
     "release:update": "sh -c \"$(curl -fsSL https://raw.githubusercontent.com/the0neWhoKnocks/release-script/master/js/tools/install.sh) --update --install-dir \\\"bin\\\"\"",
     "start": "node ./src/server",
     "start:dev": "concurrently --kill-others -p \"[ {name} ]\" -n SERVER -c black.bgGreen \"NODE_ENV=dev node ./watcher.js\"",
-    "test": "jest --runInBand --no-watchman --config ./conf.jest.js",
-    "test:watch": "JEST_WATCH=true jest --no-watchman --watch --changedSince=master --config ./conf.jest.js"
+    "test": "./e2e/bin/test-runner.sh",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -34,8 +34,7 @@
     "cli-color": "2.0.2",
     "concurrently": "7.2.1",
     "eslint": "8.16.0",
-    "jest": "28.1.0",
-    "jest-localstorage-mock": "2.4.21",
+    "eslint-plugin-cypress": "2.11.3",
     "nodemon": "2.0.16"
   }
 }
